--- a/src/app/blog/(posts)/0008/page.mdx
+++ b/src/app/blog/(posts)/0008/page.mdx
@@ -27,13 +27,24 @@ Whenever a peripheral is added to a hardware project, it is important to underst
 
 For this project, I used a [SSD1306 128x64 monochrome OLED display](https://www.adafruit.com/product/326). This is a fairly well established part and has variants depending on the size of the display or other needs. While the full circuit is very complicated due to the amount of data lines the chip uses, the block diagram provided by the [datasheet](https://cdn-shop.adafruit.com/datasheets/SSD1306.pdf) elucidates quite a bit about the design:
 
-//TODO Insert datasheet block diagram
+import blockDiagram from './block_diagram.webp';
+
+<div className="text-center">
+<Image src={blockDiagram} alt="" width={812} height={707} className='mx-auto mb-4'/>
+<em>Block Diagram of the SSD1306 - Source: SSD1306 Datasheet</em>
+</div>
+
 
 What I gathered from this diagram (based on background knowledge and more of the datasheet) is that this is a _very_ simplified CPU. Sure, there might not be an [ALU](https://en.wikipedia.org/wiki/Arithmetic_logic_unit) or a [register file](https://en.wikipedia.org/wiki/Register_file), but the reason I consider it as such is that it takes inputs that could be interpreted as [machine code](https://en.wikipedia.org/wiki/Machine_code). This acts more like [G-Code](https://en.wikipedia.org/wiki/G-code) from the machinist and CAM world but instead of moving motors or extruders "commands" manipulate the physical pixels, which are stored in the Graphics RAM.
 
 Continuing the comparison to machine code, the datasheet has an entire section about what signals and bits need to be set for different actions such as changing oscillator speeds or setting pixels. One of the most important signals is the "Data/Command (D/C)" bit which controls the interpretation of whatever is being sent over the _data bus_ (indicated with pins D0-D7); if the signal is high, data from the bus is written to RAM, otherwise (when low) it is pushed to the command decoder and changes internal display state wizardry. When paired with the "Read/Write (R/W)" signal, it allows for controlling the direction of data on the bus and what the source of the data is (see Table 9-3 in the datasheet). This project only writes to the display, so the R/W signal is always set to have the bus write to the display controller.
 
-//Insert screenshot of some of the command tables
+import commandTables from './command_tables.webp';
+
+<div className="text-center">
+<Image src={commandTables} alt="" width={812} height={534} className='mx-auto mb-4'/>
+<em>Some Example Tables Documenting Commands- Source: SSD1306 Datasheet</em>
+</div>
 
 There are a good chunk of commands, but most of these are only relevant when initializing the display on power up, such as changing how the RAM is mapped to the physical pixels (via the internal drivers). Depending on how processor code is written, an "initialization command list" can be created to ensure a consistent live configuration of the display is preserved whenever the device is powered on. Having this also allows enforcement of certain semantics when writing to the display (more on that in a bit), which ensures a consistent internal state on initialization.
 
@@ -64,7 +75,12 @@ With the information to initialize the display, it is now time to change some pi
 When looking at the data bus, it is only 8 bits wide. Yet there are 8192 pixels on the display that can be switched on and off. Obviously, it is not efficient to try and connect all 8192 pixels directly to a microcontroller, that is why the display controller exists. But how does the display controller know where to turn on the pixels? Short answer, it's based on whatever is in the Graphics RAM (from the block diagram). But a more correct (and necessary) answer is required to even consider displaying anything meaningful.
 Section 8-7 of the SSD1306 datasheet is very revealing about how the graphics RAM represents the pixels on the screen. While in reality the RAM is effectively a contiguous block, the block is abstracted into 8 "pages", each representing a 128x8 portion of the display. There are no specific details how these pages are implemented, but it could be a very simple implementation involving a [multiplexer (mux)](https://en.wikipedia.org/wiki/Multiplexer) that selects a RAM block to manipulate (_this is speculation_).
 
-//Insert diagram from 8-7 here
+import segBlock from './seg_block.webp';
+
+<div className="text-center">
+<Image src={segBlock} alt="" width={708} height={265} className='mx-auto mb-4'/>
+<em>What the Graphics RAM looks like - Source: SSD1306 Datasheet</em>
+</div>
 
 Even when working in the smaller [address space](https://en.wikipedia.org/wiki/Address_space) under the pages, that is still 1024 pixels that need to be managed and can't really be connected en-masse to the microcontroller. Plus, a page in this case is a smaller contiguous block of RAM which can be mapped to the physical pixels in different ways. It's not dissimilar to how a multidimensional array can be represented in different ways while maintaining a flat-array footprint in C:
 
@@ -83,7 +99,6 @@ Again, all of this functionality is abstracted by the display controller, what m
 
 To efficiently display characters without doing too much math, a constant table containing the respective byte sequences for each character is added to the project. In a sense, this is creating a simple [bitmap font](https://en.wikipedia.org/wiki/Computer_font#BITMAP) which can easily be indexed against [ASCII Codes](https://en.wikipedia.org/wiki/ASCII); by default strings are already stored in an encoding that extends ASCII so minimal effort is needed to perform the mapping. Each character is sized at 5x7 pixels, which means the last row of each character can be reserved as a built-in space and align with the row count of memory pages. To save space on the limited memory, unused symbols and the [control codes](https://en.wikipedia.org/wiki/Control_character) can be removed and a little bit of math can still provide a one-to-one mapping for alphanumeric characters:
 
-//Insert Char Mapping and bitmap storage snippet code
 ```rust
 //Assumes 0 = ASCII 0x20 or ASCII 32
 const FONT_DATA: [[u8; 6]; 96] = [
@@ -115,17 +130,27 @@ With all the information about how the display (controller) works, it is now tim
 
 [Inter-Inter Circuit Communication (shortened to I2C and stylized as I²C)](https://en.wikipedia.org/wiki/I%C2%B2C) is a specification for bidirectional signaling between multiple complex integrated circuits over two wires: "Serial Data (SDA)" and a "Serial Clock Signal (SCL)". Also documented as the _Two-Wire (Serial) Interface or TWI_ in microcontrollers like the [ATMEGA328P](https://ww1.microchip.com/downloads/en/DeviceDoc/ATmega48A-PA-88A-PA-168A-PA-328-P-DS-DS40002061A.pdf) used in the project, it was developed by Phillips Semiconductors (now owned by NXP) as a way to communicate between many processors, microcontrollers, and the like. As a standard, it boasts an impressive amount of flexibility in configuration, supporting up to 127 uniquely addressed devices and multiple controllers on the same bus. I wouldn't be surprised if a computer uses them for different peripherals.
 
- Given it has been a while since I touched I²C communications (because I haven't done embedded for a couple of years), I decided to do the most reasonable thing and read the official specification of the standard, which is provided by [NXP for free online](https://www.nxp.com/docs/en/user-guide/UM10204.pdf). While it contains a boat load of information that isn't fully relevant to this project such as multi-controller arbitration or ultra-fast mode (a very cool name :P), the core information about how communication between controllers and targets is there. _For this overview, I plan on skipping over details like electrical specifications and fault handling while making the examples related to communicating with the display controller. This is not to say generic implementations and details aren't important, and when doing something like designing a multipurpose microcontroller this information is absolutely necessary!_
+Given it has been a while since I touched I²C communications (because I haven't done embedded for a couple of years), I decided to do the most reasonable thing and read the official specification of the standard, which is provided by [NXP for free online](https://www.nxp.com/docs/en/user-guide/UM10204.pdf). While it contains a boat load of information that isn't fully relevant to this project such as multi-controller arbitration or ultra-fast mode (a very cool name :P), the core information about how communication between controllers and targets is there. _For this overview, I plan on skipping over details like electrical specifications and fault handling while making the examples related to communicating with the display controller. This is not to say generic implementations and details aren't important, and when doing something like designing a multipurpose microcontroller this information is absolutely necessary!_
 
 ### "Instant" Messaging over Wires
 
 The I²C protocol is based on "transactions" initiated from a controller to an addressed target (in older documentation, the terms "master"/"slave" are used instead, but due to obvious connotations the new naming is preferred in modern day). The _addressing_ is important as multiple devices could be connected to the bus, so designating which target peripheral should activate within a transaction is crucial to ensuring the right action is performed. For those who do modern backend programming, I find it similar in concept to a "targeted" [UDP](https://www.cloudflare.com/learning/ddos/glossary/user-datagram-protocol-udp/) for lack of a better description given the notion of sending data to multiple clients, the core difference is that a single client usually responds to a message (if such an addressed client exists). Each transaction begins when the controller sends a _start condition_ and (ends) successfully when the controller sends the _stop condition_, which is based off of the specific state of SDA and SCL over a certain period of time.
 
-//Insert start/stop diagrams
+import startStop from './start_stop.webp';
+
+<div className="text-center">
+<Image src={startStop} alt="" width={541} height={164} className='mx-auto mb-4'/>
+<em>Start and Stop Signal Diagrams - Source: I²C Specification</em>
+</div>
 
 Within each transaction, messages are sent in 1 byte (8 bits) "packets", with each packet being followed by an _acknowledge bit_ before the next byte is sent. This acknowledge works similarly to how a start/stop condition is detected, making it clear when a target (or the controller if it is reading from a target) is ready for the next byte.
 
-//Insert msg/acknowledge
+import ackBits from './ack_bits.webp';
+
+<div className="text-center">
+<Image src={} alt="" width={680} height={196} className='mx-auto mb-4'/>
+<em>An Example Message with Acknowledge Bit - Source: I²C Specification</em>
+</div>
 
 At the beginning of each transaction, the first byte sent over the bus is the 7-bit address of the target peripheral to communicate with plus a _read-write (R/W) bit_ indicating the direction information is sent on the bus (read means target to controller, write is the opposite). While reading from a device is the only way to interact with certain peripherals, the plan is to only write to the display controller, so all future examples will assume a controller-target communication scheme and thus the R/W bit will be `0` due to it being active low. Given the I²C address of the controller being `0x3C`, the first byte of each transaction would actually be `0x78` since the 7-bit address uses the _most significant bits (MSB)_ of said byte.
 
